--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
 
 #root {
   width: 100%;
-  height: 100vh;
-  overflow: hidden;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  text-align: left;
 }
 
